Fix vertical scrollbar, oops.
Darn, should just create the tall ones locally, d'oh.

--- a/css/compat.less
+++ b/css/compat.less
@@ -90,7 +90,6 @@
 	list-style: none;
 	margin: 0;
 	margin-bottom: 10px;
-	max-height: 272px;
 	overflow-x: auto;
 	padding: 0;
 	padding-bottom: 5px;
